fixes mobile menu design and alignment

--- a/frontend/css/desktop-menu.css
+++ b/frontend/css/desktop-menu.css
@@ -114,6 +114,13 @@ a {
   text-align: center;
 }
 
+/* Arrow indicator for dropdown menus */
+.arrow-indicator {
+  font-size: 0.6rem;
+  margin-left: 4px;
+  display: inline-block;
+}
+
 /* Categories dropdown */
 .categories-list {
   display: flex;
